--- a/config.yml
+++ b/config.yml
@@ -1,14 +1,12 @@
 baseURL: https://ssungwxx.github.io
 
+languageCode: en-us
 title: "SugnwooKim's place"
 theme: "toha"
 
-
-DefaultContentLanguage: ko
-
 languages:
-  ko:
-    languageName: "Korean"
+  en:
+    languageName: Engilish
     weight: 1
 
 # Control TOC depth
@@ -18,14 +16,6 @@ markup:
     endLevel: 6
     ordered: false
  
-# At least HTML and JSON are required for the main HTML content and
-# client-side JavaScript search
-outputs:
-  home:
-  - HTML
-  - RSS
-  - JSON
-
 # Enable global emoji support
 enableEmoji: true
 
@@ -40,11 +30,11 @@ params:
   # specify whether you want to show Table of Contents in reading page
   enableTOC: true
 
+  newsletter:
+    enable: false
+
   background: images/background-sunset.jpeg
   logo:
     main: images/cat.png
     inverted: images/cat.png
     favicon: images/cat.png
-
-  newsletter:
-    enable: false
