--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -13,8 +13,14 @@ designation: Software Engineer
 #   url: "https://www.example.com"
 
 summary: '안녕하세요 새로운 도전을 좋아하는 개발자 김성우입니다.
+
+
 필요하다고 느끼기전에 미리 새로운 것을 알아보고 선행하는 작업을 좋아합니다. 최근 관심을 가지고 있는 도메인은 Spring과 Kubernetes 입니다.
-자동화와 간결함을 좋아하여 복잡하고 반복되는 것을 줄일려고 노력합니다. 새로운 코드를 짜서 추가하는 것보다 기존의 코드를 개선하여 간결하고 효율적으로 작업하고자 노력합니다.
+
+
+자동화와 간결함을 좋아하여 복잡하고 반복되는 것을 줄일려고 노력합니다. 무작정 완성하기보다 안전하고 확장성있는 코드를 짜는 것을 목표로 하고 있습니다.
+
+
 개발뿐만 아니라 게임, 칵테일 제조, 먹거리 탐방, 고양이도 좋아합니다. 누구든 만나게 된다면 다양한 이야기를 나누고 싶어요. 🙋🏻'
 
 socialLinks:
