--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -13,12 +13,12 @@ skills:
 
 - name: Spring boot
   # logo: "/images/sections/skills/go.png"
-  summary: "Spring boot를 사용하며 Gradle을 같이 사용합니다. 방대한 생태계를 적극 활용하고자 합니다."
+  summary: "Spring boot + Gradle을 사용합니다. 방대한 생태계를 적극 활용하고자 합니다."
   # url: "https://golang.org/"
 
 - name: Kubernetes
   # logo: "/images/sections/skills/cloud.png"
-  summary: "Kubernetes를 사용한 배포 경험이 있고, 내부 구조에 대해 이해하고 있습니다."
+  summary: "Kubernetes를 통해 서비스를 배포하고 운영하는 것을 좋아합니다."
 
 - name: Golang
   summary: "개인적으로 서브 언어로 사용중입니다. 간단한 도구는 Golang을 사용해서 만들고자 하며 조건이 갖춰진다면 현업에서도 활용하고 싶습니다."
