소개 및 경험 업데이트

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -11,6 +11,6 @@ contactInfo:
 
 # a summary of what you do
 summary:
-- I am a software enginner with craftsmanship
-- I work with Java, Spring, Kubernetes
-- I love to work with other people
+- I am a software enginner who like cloud
+- I work with Java, Spring and a little of Kubernetes
+- I interested in so many things
